	  - added a bunch of files (generally moved from business-gnome)
	* moved a bunch of other non-gnome definitions out of the gnome-specific
	  locations (gnome-utils -> app-utils, or business-gnome -> business-utils)

	* gncEntryLedgerLoad.c: commented-out code to load tax-tables from
	  the options; waiting until code is actually written.
	
2003-01-16  Derek Atkins  <derek@ihtfp.com>

	* src/engine/commodity-table.scm: move gnc:commodity-is-currency? here
	* src/engine/engine.scm: export gnc:commodity-is-currency?
	* src/report/report-system/report-system.scm: remove ref to same.
	* src/report/report-system/report-system.scm: remove function above
	* src/import-export/qifiimport/qif-to-gnc.scm: fix the algorithm
	  to find/create new accounts.  All "parent" accounts are of
	  commodity "default-currency" (but don't really care about that).
	  When creating a leaf account, use the security if it's a
	  stock/mmf account, but the default-currency otherwise.
	  Fixes #103633.

	  NOTE:  Might need similar fixed in qif-io-core?

	* qif-merge-groups.scm: Limit matches against only the accounts in
	  the old group, so we don't match against ourselves.  This should
	  limit the matches to only "reasonable" matches, and should fix #102463
	
2003-01-15  David Hampton  <hampton@employees.org>

	* configure.in: Remove restriction on guile versions > 1.4.
	Provide a version dependant load path variable for the SRFI
	location. (Empty in 1.6 since they're bundled with guile.)

	* src/engine/Makefile.am: Don't hard code the location of the
	SRFIs into the guilel load path.

	* src/import-export/qif-import/qif-file.scm: The rdelim module
	moved locations in guile 1.6

2003-01-15  John H. Pierce <john@killterm.org>

	* Makefile.am:
	* configure.in:
	* src/app-file/Makefile.am:
	* src/app-utils/Makefile.am:
	* src/backend/net/Makefile.am:
	* src/backend/rpc/Makefile.am:
	* src/bin/Makefile.am:
	* src/business/business-core/Makefile.am:
	* src/business/business-gnome/Makefile.am: